# siamese

./: .gitignore  0001-nvidia.patch  config.toml  main.py  pyproject.toml  training.py
src/: config.py  datasets.py  model.py
